# pacifica-robinhood-migration

./: .codeclimate.yml  .gitignore  .hlint.yaml  .travis.yml  BRAND.md  DEV_NOTES.md  README.md  pacifica-metadata-servant-curl-client-exe.tix  requirements-dev.txt  stack.yaml
.github/: ISSUE_TEMPLATE.md
curl-client/: README.md  curl-client.cabal
curl-client/src/Network/Curl/: Client.hs
pacifica-metadata/: README.md  pacifica-metadata.cabal
pacifica-metadata-client-curl/: README.md  pacifica-metadata-client-curl.cabal
pacifica-metadata-client-curl/src/Pacifica/Metadata/Client/: Curl.hs
pacifica-metadata-servant/: README.md  pacifica-metadata-servant.cabal
pacifica-metadata-servant-curl-client/: README.md  pacifica-metadata-servant-curl-client.cabal
pacifica-metadata-servant-curl-client/src/Pacifica/Metadata/API/: Curl.hs
pacifica-metadata-servant/src/Pacifica/Metadata/: API.hs
pacifica-metadata/src/Pacifica/: Metadata.hs
pacifica-metadata/src/Pacifica/Metadata/: API.hs  Types.hs
pacifica-robinhood-migration/: README.md  config.json  pacifica-robinhood-migration.cabal
pacifica-robinhood-migration/app/: Main.hs  ScanRobinhoodEntries.hs
pacifica-robinhood-migration/src/Pacifica/Robinhood/: Migration.hs
pacifica-robinhood-migration/src/Pacifica/Robinhood/Migration/: App.hs  Conversions.hs  Types.hs
robinhood/: robinhood.cabal
robinhood-extras/: README.md  robinhood-extras.cabal
robinhood-extras/src/Robinhood/: Extras.hs
robinhood-extras/src/Robinhood/Extras/: Types.hs
robinhood-treemap/: README.md  robinhood-treemap.cabal
robinhood-treemap/app/: Main.hs
robinhood-treemap/src/Robinhood/: Treemap.hs
robinhood/src/: Robinhood.hs
robinhood/src/Robinhood/: EntryType.hs  Types.hs
robinhood/test/: Spec.hs
travis/: before-install.sh
