name:                curl-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/curl-client#readme
license:             LGPL
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2017 Pacific Northwest National Laboratory
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Curl.Client
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , data-default
                     , http-types
                     , monad-control
                     , monad-logger
                     , mtl
                     , process
                     , text
                     , transformers
                     , transformers-base
                     , url
  default-language:    Haskell2010
  ghc-options:         -Wall

executable curl-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , curl-client
  default-language:    Haskell2010

test-suite curl-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , curl-client
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/curl-client
