name:                pacifica-metadata-client-curl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/pacifica-metadata-client-curl#readme
license:             LGPL
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2017 Pacific Northwest National Laboratory
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pacifica.Metadata.Client.Curl
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , data-default
                     , mtl
                     , pacifica-metadata
                     , process
                     , text
                     , time
                     , transformers
                     , url
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pacifica-metadata-client-curl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pacifica-metadata
                     , pacifica-metadata-client-curl
                     , transformers
                     , url
  default-language:    Haskell2010

test-suite pacifica-metadata-client-curl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pacifica-metadata
                     , pacifica-metadata-client-curl
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/pacifica-metadata-client-curl
