name:                pacifica-robinhood-migration
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/pacifica-robinhood-migration#readme
license:             LGPL
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2017 Pacific Northwest National Laboratory
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , config.json
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pacifica.Robinhood.Migration
                     , Pacifica.Robinhood.Migration.App
                     , Pacifica.Robinhood.Migration.Conversions
                     , Pacifica.Robinhood.Migration.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , conduit
                     , containers
                     , curl-client
                     , exceptions
                     , ldap-client
                     , monad-control
                     , monad-logger
                     , mtl
                     , pacifica-metadata
                     , pacifica-metadata-servant
                     , pacifica-metadata-servant-curl-client
                     , persistent
                     , persistent-mysql-haskell
                     , process
                     , resourcet
                     , robinhood
                     , robinhood-extras
                     , text
                     , transformers
                     , transformers-base
                     , url
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pacifica-robinhood-migration-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , conduit
                     , curl-client
                     , exceptions
                     , ldap-client
                     , monad-control
                     , monad-logger
                     , mtl
                     , pacifica-metadata
                     , pacifica-metadata-servant
                     , pacifica-metadata-servant-curl-client
                     , pacifica-robinhood-migration
                     , persistent
                     , resourcet
                     , robinhood
                     , robinhood-extras
                     , text
                     , transformers
                     , transformers-base
  default-language:    Haskell2010

test-suite pacifica-robinhood-migration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pacifica-robinhood-migration
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/pacifica-robinhood-migration
