name:                robinhood-treemap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/robinhood-treemap#readme
license:             LGPL
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2017 Pacific Northwest National Laboratory
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Robinhood.Treemap
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , filepath
                     , free
  default-language:    Haskell2010
  ghc-options:         -Wall

executable robinhood-treemap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bytestring
                     , cmdargs
                     , conduit
                     , conduit-extra
                     , data-default
                     , resourcet
                     , robinhood
                     , robinhood-extras
                     , robinhood-treemap
                     , text
  default-language:    Haskell2010

test-suite robinhood-treemap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , robinhood-treemap
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://stash.pnnl.gov/users/bork374/repos/haskell-robinhood-library/robinhood-treemap
